--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{%block title%}{% endblock%}</title>
-</head>
-<body>
+  </head>
+  <body>
+    <h1>My Blog</h1>
     {% block content %}{% endblock %}
-</body>
+  </body>
 </html>
